# tpm2-native

./: Makefile  README.md  setup.cfg
tpm2_native/: GetCapability.py  GetRandom.py  GetTestResult.py  IncrementalSelfTest.py  SelfTest.py  Shutdown.py  Startup.py  StirRandom.py  TestParms.py  common.py
