[metadata]
name = tpm2-native
version = 5
url = https://github.com/metebalci/tpm2-native
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = collection of tools for playing with TPM v2 modules natively e.g. through SPI
long_description_content_type = text/markdown
long_description = file:README.md
keywords = 
  tpm 
  tpm2
classifiers = 
  Development Status :: 3 - Alpha
  Environment :: Console
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts = 
  tpm2_Startup=tpm2_native.Startup:main
  tpm2_Shutdown=tpm2_native.Shutdown:main
  tpm2_SelfTest=tpm2_native.SelfTest:main
  tpm2_IncrementalSelfTest=tpm2_native.IncrementalSelfTest:main
  tpm2_GetTestResult=tpm2_native.GetTestResult:main
  tpm2_GetRandom=tpm2_native.GetRandom:main
  tpm2_StirRandom=tpm2_native.StirRandom:main
  tpm2_GetCapability=tpm2_native.GetCapability:main
  tpm2_TestParms=tpm2_native.TestParms:main
